--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,10 +1,37 @@
 body {
-    background-color: beige;
+    background-color: #114954;
     text-align: center;
 }
 
 h1 {
-    color: green
+    width: 15%;
+    padding: 18px;
+    margin: 0 auto 20px;
+    font-family: Consolas, serif;
+    background-color: #218CA1;
+    border: 2px solid #BDF4F8;
+    border-radius: 50px;
+}
+
+h2 {
+    width: 300px;
+    padding: 16px;
+    margin: 0 auto 15px;
+    font-family: Consolas, serif;
+    background-color: #218CA1;
+    border: 2px solid #BDF4F8;
+    border-radius: 25px;
+}
+
+p {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto 10px;
+    padding: 5px;
+    font-family: Consolas, serif;
+    background-color: #2BB9D4;
+    border: 1px solid #BDF4F8;
+    border-radius: 15px;
 }
 
 form {
@@ -12,7 +39,8 @@ form {
 }
 
 input {
-    width: 40%;
+    font-size: 16px;
+    width: 30%;
     padding: 12px;
     border-radius: 12px;
     margin: 12px 0;
@@ -20,12 +48,51 @@ input {
 }
 
 button {
+    font-size: 14px;
     margin: 12px 0;
-    padding: 6px;
+    padding: 20px;
     border-radius: 12px;
-    width: 20%;
+    width: 15%;
 }
 
 button:hover {
     background-color: azure;
+}
+
+button.blue {
+    background-color: #2BB9D4;
+}
+
+button.blue:hover {
+    background-color: #34F3FF;
+}
+
+button.green {
+    background-color: #6bf352;
+}
+
+button.green:hover {
+    background-color: #6bff85;
+}
+
+button.red {
+    background-color: #D4462B;
+}
+
+button.red:hover {
+    background-color: #ff6e56;
+}
+
+button.trans-button {
+    background-color: #2BB9D4;
+    width: 100%;
+    margin: 0 auto 10px;
+    padding: 5px;
+    font-family: Consolas, serif;
+    border: 1px solid #BDF4F8;
+    border-radius: 15px;
+}
+
+button.trans-button:hover {
+    background-color: #34F3FF;
 }
